--- a/HTML: Forms & Tables/4. Woring with Forms/index.html
+++ b/HTML: Forms & Tables/4. Woring with Forms/index.html
@@ -11,30 +11,32 @@
     <h1>Forms Demo</h1>
     <form action="/tacos">
         <p>
-            <label for="Username">Username</label>
-            <input id="Username" type="text" placeholder="Username">
+            <label for="username">Username</label>
+            <input id="username" type="text" placeholder="username" name="username">
         </p>
         <p>
-            <label for="Password">Password</label>
-            <input id="Password" placeholder="Super secret password">
+            <label for="password">Password</label>
+            <input id="password" placeholder="Super secret password" name="password">
         </p>
         <p>
             <label for="color">Select a color</label>
-            <input id="color" type="color">
+            <input id="color" type="color" name="color">
         </p>
         <p>
             <label for="age">Confirm your age</label>
-            <input id="age" type="number" placeholder="Age">
+            <input id="age" type="number" placeholder="Age" name="age">
         </p>
         <br>
         <div class="Preferences">
             <label for="terms">Do you accept terms and conditions?</label>
-            <input type="checkbox" id="terms">
+            <input type="checkbox" id="terms" name="acceptPreferences">
         </div>
         <div class="Preferences">
             <label for="mails">Do you want to recieve mails?</label>
-            <input type="checkbox" id="mails">
+            <input type="checkbox" id="mails" name="recievemail">
         </div>
+        <button type="submit">Send Data</button>
+        <button type="reset">Reset Data</button>
     </form>
 </body>
 
