radiocheck & select - option

--- a/HTML: Forms & Tables/4. Woring with Forms/index.html
+++ b/HTML: Forms & Tables/4. Woring with Forms/index.html
@@ -37,6 +37,25 @@
         </div>
         <button type="submit">Send Data</button>
         <button type="reset">Reset Data</button>
+
+        <h2>One more choice</h2>
+        <div class="Donate">
+            <label for="pay">Donate $1</label>
+            <input type="radio" name="pay" id="pay" value="pay">
+        </div>
+        <div class="Donate">
+            <label for="free">Go free</label>
+            <input type="radio" name="pay" id="free" value="free">
+        </div>
+
+        <h2>Select the category</h2>
+        <select name="Size" id="size">
+            <option value="blank" name="blank">---Select a option---</option>
+            <option value="xs" name="xs">xs</option>
+            <option value="s" name="s">s</option>
+            <option value="m" name="m">m</option>
+            <option value="l" name="l">m</option>
+        </select>
     </form>
 </body>
 
