--- a/CSS: Selectors/1. Universal & Element Selectors/index.html
+++ b/CSS: Selectors/1. Universal & Element Selectors/index.html
@@ -10,9 +10,10 @@
 
 <body>
     <nav>
-        <input type="text" placeholder="search">
+        <label for="search">Search</label>
+        <input type="text" id="search" placeholder="Something amazing">
         <button>Log In</button>
-        <button>Sign Up</button>
+        <button id="register">Sign Up</button>
     </nav>
     <main>
         <h1>Recent Posts</h1>
