--- a/CSS: Selectors/1. Universal & Element Selectors/index.html
+++ b/CSS: Selectors/1. Universal & Element Selectors/index.html
@@ -19,19 +19,19 @@
         <h1>Recent Posts</h1>
         <section>
             <span>Posted by <a href="#.">/u/Go_Student</a></span>
-            <h2>Learning Go <span>programming</span></h2>
+            <h2>Learning Go <span class="category">programming</span></h2>
             <button>Up Vote</button>
         </section>
         <hr>
         <section>
             <span>Posted by <a href="#.">/u/John_Doe</a></span>
-            <h2>Look at this poor thing, is so beautiful <span>cats</span></h2>
+            <h2>Look at this poor thing, is so beautiful <span class="category">cats</span></h2>
             <button>Up Vote</button>
         </section>
         <hr>
         <section>
             <span>Posted by <a href="#.">/u/not_a_hacker</a></span>
-            <h2>All my bitcoins have been stolen <span>idiot</span></h2>
+            <h2>All my bitcoins have been stolen <span class="category">idiot</span></h2>
             <button>Up Vote</button>
         </section>
         <hr>
