The Adjacent & Direct-Descendant Selectors

--- a/CSS: Selectors/1. Universal & Element Selectors/index.html
+++ b/CSS: Selectors/1. Universal & Element Selectors/index.html
@@ -42,6 +42,7 @@
                 <li><a href="">Contact</a></li>
                 <li><a href="">Support us</a></li>
             </ul>
+            <a href="#license">Content is available under license</a>
         </footer>
     </main>
 </body>
