--- a/CSS: Selectors/1. Universal & Element Selectors/index.html
+++ b/CSS: Selectors/1. Universal & Element Selectors/index.html
@@ -42,6 +42,8 @@
                 <li><a href="">Contact</a></li>
                 <li><a href="">Support us</a></li>
             </ul>
+            <label for="promo">Receive a great promo code</label>
+            <input type="email" name="promo" id="promo" placeholder="mail@mail.com">
             <a href="#license">Content is available under license</a>
         </footer>
     </main>
