--- a/CSS: Selectors/1. Universal & Element Selectors/index.html
+++ b/CSS: Selectors/1. Universal & Element Selectors/index.html
@@ -71,6 +71,36 @@
             <button>Up Vote</button>
         </section>
         <hr>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et, debitis explicabo officiis tempore consectetur
+            voluptate doloribus quam. Odio ab nisi itaque sit, officia voluptatem nobis repellat! Eius vel nihil quas!
+            Quam, eaque neque! Repellat eum minima repudiandae blanditiis dolore deserunt voluptas doloribus. Illo iure
+            cupiditate aut sed ipsam est soluta molestias voluptates? Deleniti eum labore, dolorem sit suscipit
+            recusandae incidunt.
+            Aut temporibus in minus dicta sapiente aliquam facere ducimus quibusdam fugiat odit nam eveniet magnam
+            eligendi quia cupiditate nisi explicabo cumque nobis dolore aliquid, voluptatibus ipsam eius necessitatibus?
+            Aperiam, harum.
+            Cupiditate quos quod debitis necessitatibus ex consequatur vitae voluptate magni assumenda rem cum tempora
+            eligendi in quisquam, similique autem labore ipsa amet quaerat illum totam id? Voluptas consequatur dolore
+            iste.
+            Animi magni dolores iusto tempore libero impedit fuga voluptas nesciunt natus suscipit. Quas minus debitis,
+            magni, sit ex necessitatibus facilis quasi tempora doloremque illo incidunt. Dolorem asperiores eveniet non
+            neque?
+            Consectetur, debitis illum sit vero deserunt culpa ab at illo perspiciatis libero consequuntur officiis id
+            similique unde velit eum ipsa eaque, harum consequatur. Nostrum necessitatibus sunt accusamus animi tempore
+            odit.
+            Illo cupiditate doloribus tempore, reprehenderit alias dolorum odit ipsum aliquam nulla enim molestiae
+            mollitia minima, quos optio possimus nemo eligendi dolorem quibusdam in eum, magni voluptatem ipsa. Iste,
+            odit? Ducimus!
+            Sapiente aut officiis, illum aspernatur nam quaerat excepturi laudantium reprehenderit veritatis neque
+            perferendis autem reiciendis dolorum! Officiis architecto saepe id dolorum optio quo minima. Esse, rem?
+            Aliquam nostrum beatae magnam!
+            Ratione dicta placeat rem deleniti tenetur in sint quisquam odio, ex necessitatibus unde quasi quia iure
+            adipisci nisi. Blanditiis aut minima deleniti rerum repellat quisquam obcaecati voluptatibus? Nobis,
+            quisquam praesentium.
+            Ab cupiditate libero fugit assumenda. Maiores autem laudantium repellat aperiam eius blanditiis commodi
+            exercitationem eum ut assumenda perspiciatis quam reprehenderit recusandae praesentium libero similique
+            totam, culpa obcaecati reiciendis ex eveniet?</p>
+        <hr>
         <footer>
             <ul>
                 <li><a href="">Home</a></li>
