Border Properties & box-sizing

--- a/CSS: The Box Model/1. Box Model/index.html
+++ b/CSS: The Box Model/1. Box Model/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <h1>Box Model</h1>
-<div>Poop on grasses. Pose purrfectly to show my beauty. Love pretend not to be evil. Cat playing a fiddle in hey diddle
+<div id="one">Poop on grasses. Pose purrfectly to show my beauty. Love pretend not to be evil. Cat playing a fiddle in
+    hey diddle
     diddle? licks your face steal mom's crouton while she is in the bathroom ð•„ð”¼ð•†ð•Ž jump five feet high and
     sideways when a shadow moves. Love you, then bite you crash against wall but walk away like nothing happened. Cattt
     catt cattty cat being a cat. Human clearly uses close to one life a night no one naps that long so i revive by
@@ -16,7 +17,8 @@
     where is my slave? I'm getting hungry but prow?? ew dog you drink from the toilet, yum yum warm milk hotter pls,
     ouch too hot hack up furballs.
 </div>
-<div>Stare at wall turn and meow stare at wall some more meow again continue staring hide head under blanket so no one
+<div id="two">Stare at wall turn and meow stare at wall some more meow again continue staring hide head under blanket so
+    no one
     can see, steal the warm chair right after you get up so freak human out make funny noise mow mow mow mow mow mow
     success now attack human jump on counter removed by human jump on counter again removed by human meow before jumping
     on counter this time to let the human know am coming back yet while happily ignoring when being called. Scratch me
@@ -25,7 +27,8 @@
     taking a catnap. Chirp at birds use lap as chair, or ha ha, you're funny i'll kill you last, so cat walks in
     keyboard yet thinking longingly about tuna brine
 </div>
-<div>Cats are a queer kind of folk hunt by meowing loudly at 5am next to human slave food dispenser so catching very
+<div id="three">Cats are a queer kind of folk hunt by meowing loudly at 5am next to human slave food dispenser so
+    catching very
     fast laser pointer meowzer. Please stop looking at your phone and pet me try to jump onto window and fall while
     scratching at wall but make meme, make cute face fish i must find my red catnip fishy fish, chase the pig around the
     house and poop in the plant pot. There's a forty year old lady there let us feast scratch me there, elevator butt
