Working with 'REms' in CSS

--- a/CSS: The Box Model/3. CSS Units/index.html
+++ b/CSS: The Box Model/3. CSS Units/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>CSS Units</h1>
-<article>
+<article id="ems">
     <h2>This is an article</h2>
     <h3>H3 here!</h3>
     <p>Candy canes bear claw lollipop lemon drops gummies. Chupa chups sesame snaps dessert gummies croissant
@@ -19,9 +19,56 @@
         fruitcake.
     </p>
     <button>Click me</button>
+    <ul>
+        <li>
+            I love Golang
+            <ul>
+                <li>Ravioli
+                    <ul>
+                        <li>Spinach Ricotta</li>
+                    </ul>
+                </li>
+                <li>Penne</li>
+            </ul>
+        </li>
+        <li>I love Cats</li>
+        <li>I love Programming</li>
+        <li>I love Money</li>
+    </ul>
 </article>
 <section>
     <div></div>
 </section>
+
+<article id="rems">
+    <h2>USING REMS</h2>
+    <h3>H3 here!</h3>
+    <p>Candy canes bear claw lollipop lemon drops gummies. Chupa chups sesame snaps dessert gummies croissant
+        shortbread. Cheesecake apple pie gingerbread cookie jujubes cheesecake.
+    </p>
+    <p>
+        Jelly-o lemon drops wafer donut candy canes marzipan wafer brownie. Jelly beans cupcake sesame snaps jelly oat
+        cake chupa chups. Halvah donut bonbon pastry pie fruitcake dessert. Oat cake jelly marshmallow candy
+        fruitcake.
+    </p>
+    <button>Click me</button>
+    <ul>
+        <li>
+            I love Golang
+            <ul>
+                <li>Ravioli
+                    <ul>
+                        <li>Spinach Ricotta</li>
+                    </ul>
+                </li>
+                <li>Penne</li>
+            </ul>
+        </li>
+        <li>I love Cats</li>
+        <li>I love Programming</li>
+        <li>I love Money</li>
+    </ul>
+</article>
+
 </body>
 </html>
