--- a/CSS: Responsive CSS & Flexbox/MediaQueries/index.html
+++ b/CSS: Responsive CSS & Flexbox/MediaQueries/index.html
@@ -20,6 +20,7 @@
                 <a href="#Home">Contact</a>
             </li>
         </ul>
+        <a href="#Home">Sign Up</a>
     </nav>
     <h1>Media Queries</h1>
 </body>
