Working with Bootstrap buttons

--- a/CSS: Bootstrap/index.html
+++ b/CSS: Bootstrap/index.html
@@ -18,6 +18,13 @@
                 itaque ea, ducimus officia quis ratione culpa soluta a harum
                 voluptate ullam repudiandae autem magni et unde explicabo?
                 Architecto, ea!</p>
+            <button type="button" class="btn btn-primary">Continue</button>
+            <button type="button" class="btn btn-success">Congrats</button>
+            <button type="button" class="btn btn-info">Info</button>
+
+            <button type="button"
+                class="btn btn-outline-warning">Problems</button>
+            <button type="button" class="btn btn-outline-danger">Danger</button>
             <script
                 src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
                 integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
