--- a/CSS: Bootstrap/index.html
+++ b/CSS: Bootstrap/index.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bootstrap</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-            crossorigin="anonymous">
-        <link rel="stylesheet" href="app.css">
-    </head>
-    <body>
-        <div class="container">
-            <h1>Placeholder</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut odit
-                itaque ea, ducimus officia quis ratione culpa soluta a harum
-                voluptate ullam repudiandae autem magni et unde explicabo?
-                Architecto, ea!</p>
-            <button type="button" class="btn btn-primary">Continue</button>
-            <button type="button" class="btn btn-success">Congrats</button>
-            <button type="button" class="btn btn-info">Info</button>
 
-            <button type="button"
-                class="btn btn-outline-warning">Problems</button>
-            <button type="button" class="btn btn-outline-danger">Danger</button>
-            <script
-                src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-                integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-                crossorigin="anonymous"></script>
-            <script
-                src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
-                integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
-                crossorigin="anonymous"></script>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="app.css">
+</head>
+
+<body>
+    <div class="container">
+        <h1 class="display-2 text-center">Placeholder</h1>
+        <h2 class="display-4">Buttons</h2>
+        <button type="button" class="btn btn-primary">Continue</button>
+        <button type="button" class="btn btn-success">Congrats</button>
+        <button type="button" class="btn btn-info">Info</button>
+
+        <button type="button" class="btn btn-outline-warning">Problems</button>
+        <button type="button" class="btn btn-outline-danger">Danger</button>
+        <p class="bg-primary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut odit
+            itaque ea, ducimus officia quis ratione culpa soluta a harum
+            voluptate ullam repudiandae autem magni et unde explicabo?
+            Architecto, ea!</p>
+
+        <figure>
+            <blockquote class="blockquote">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quod minima aspernatur a modi, iste
+                    quibusdam, totam numquam quidem ex aliquid eveniet odit suscipit tempora saepe tempore assumenda.
+                    Neque,
+                    fuga?</p>
+            </blockquote>
+            <figcaption class="blockquote-footer">
+                Mr Lorem Ipsum
+            </figcaption>
+        </figure>
+
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
+            integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
+            crossorigin="anonymous"></script>
+    </div>
+</body>
+
 </html>
