Badges, Alerts & Button Groups

--- a/CSS: Bootstrap/index.html
+++ b/CSS: Bootstrap/index.html
@@ -13,16 +13,35 @@
 <body>
     <div class="container">
         <h1 class="display-2 text-center">Placeholder</h1>
-        <h2 class="display-4">Buttons</h2>
+        <h3 class="display-3">Buttons <span class="badge text-bg-secondary">5</span></h2>
         <button type="button" class="btn btn-primary">Continue</button>
         <button type="button" class="btn btn-success">Congrats</button>
         <button type="button" class="btn btn-info">Info</button>
 
         <button type="button" class="btn btn-outline-warning">Problems</button>
         <button type="button" class="btn btn-outline-danger">Danger</button>
-        <p class="bg-primary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut odit
+        <button type="button" class="btn btn-primary">Notifications <span
+                class="badge text-bg-warning">4</span></button>
+        <h3 class="display-3">Button Groups</h2>
+        <div class="btn-group" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-primary">Left</button>
+            <button type="button" class="btn btn-primary">Middle</button>
+            <button type="button" class="btn btn-primary">Right</button>
+        </div>
+
+        <h3>Sample of Alert</h3>
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <h4 class="alert-heading">Oh no!</h4>
+            "Something went wrong!"
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                
+            </button>
+        </div>
+        <h3 class="display-3">Typography</h2>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut odit
             itaque ea, ducimus officia quis ratione culpa soluta a harum
-            voluptate ullam repudiandae autem magni et unde explicabo?
+            voluptate <span class="badge rounded-pill text-bg-info">ullam</span> repudiandae autem magni et unde
+            explicabo?
             Architecto, ea!</p>
 
         <figure>
