Working with Responsive Grids in Bootstrap

--- a/CSS: Bootstrap/1. Working with Grid/index.html
+++ b/CSS: Bootstrap/1. Working with Grid/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1 class="display-1 text-center text-primary">The Grid System</h1>
         <div class="row">
-            <!--Max row units are 12, if we want 50% we use a 6--> 
+            <!--Max row units are 12, if we want 50% we use a 6-->
             <div class="col-6 bg-success">Yes, I'm SIMP</div>
             <div class="col-6 bg-warning">Yes, You're SIMP</div>
         </div>
@@ -26,6 +26,48 @@
             <div class="col bg-info">Yes, I'm SIMP</div>
             <div class="col bg-warning">Yes, You're SIMP</div>
             <div class="col bg-info">Yes, I'm SIMP</div>
+        </div>
+        <h2 class="display-4">Responsive Grid</h2>
+        <div class="row">
+            <div class="col-md-6 col-lg-3 bg-success">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse odio, similique neque quod
+                laudantium? Ipsa incidunt deleniti excepturi nostrum nobis non, nihil enim suscipit, magni sapiente nemo
+                saepe rem?
+            </div>
+            <div class="col-md-6 col-lg-3 bg-info">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse odio, similique neque quod
+                laudantium? Ipsa incidunt deleniti excepturi nostrum nobis non, nihil enim suscipit, magni sapiente nemo
+                saepe rem?
+            </div>
+            <div class="col-md-6 col-lg-3 bg-warning">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse odio, similique neque quod
+                laudantium? Ipsa incidunt deleniti excepturi nostrum nobis non, nihil enim suscipit, magni sapiente nemo
+                saepe rem?
+            </div>
+            <div class="col-md-6 col-lg-3 bg-primary">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse odio, similique neque quod
+                laudantium? Ipsa incidunt deleniti excepturi nostrum nobis non, nihil enim suscipit, magni sapiente nemo
+                saepe rem?
+            </div>
+        </div>
+        <h3 class="display-4">Testing With Images</h3>
+        <div class="row">
+            <div class="col-md-6 col-lg-4">
+                <img class="img-fluid"
+                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fsteamuserimages-a.akamaihd.net%2Fugc%2F43116926096139309%2F53D500175D16F79A301E28061174EDB822F1D952%2F&f=1&nofb=1&ipt=8cf7d75df3e3c91a871ba256c91d352bcc28607c170cf8879ebd574f65692a73"
+                    alt="">
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <img class="img-fluid"
+                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.softzone.es%2Fapp%2Fuploads-softzone.es%2F2020%2F08%2FGNU-Linux.jpg&f=1&nofb=1&ipt=218431077d23016f5c1e24543b403a97d2ae484a030bdae1c3b4eba0fde5b340"
+                    alt="">
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <img class="img-fluid"
+                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F13%2F18%2Fb0%2F1318b0619e67d2dd84b30431383bcaa5.png&f=1&nofb=1&ipt=ffd5f152292f092862fa97ed3d9bfb97c716f08717cb4ea89a8f3280598ae4fb"
+                    alt="">
+            </div>
+
         </div>
     </div>
 
